adding views for traveling

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".views.PlanetActivity" />
         <activity android:name=".views.UniverseActivity" />
         <activity android:name=".views.WelcomeActivity" />
+        <activity android:name=".views.SolarActivity" />
         <activity android:name=".views.ConfigurationActivity" />
         <activity
             android:name=".views.MainActivity"
